--- a/Outbreak Outrace/Assembly-CSharp.csproj
+++ b/Outbreak Outrace/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\CameraFollows.cs" />
+     <Compile Include="Assets\Script\CarControl.cs" />
      <Compile Include="Assets\Scripts\CarController.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\PlayerCar.cs" />
